--- a/CompressedStaticFiles.Example/Pages/Error.cshtml
+++ b/CompressedStaticFiles.Example/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CompressedStaticAssets.Example.Pages.ErrorModel
+@model CompressedStaticFiles.Example.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
