--- a/CompressedStaticFiles.Example/Pages/FetchData.razor
+++ b/CompressedStaticFiles.Example/Pages/FetchData.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Weather forecast</PageTitle>
 
-@using CompressedStaticAssets.Example.Data
+@using CompressedStaticFiles.Example.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
