--- a/CompressedStaticFiles.Example/Pages/_Host.cshtml
+++ b/CompressedStaticFiles.Example/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace CompressedStaticAssets.Example.Pages
+@namespace CompressedStaticFiles.Example.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
