--- a/CompressedStaticFiles.Example/Pages/_Layout.cshtml
+++ b/CompressedStaticFiles.Example/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace CompressedStaticAssets.Example.Pages
+@namespace CompressedStaticFiles.Example.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,7 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="CompressedStaticAssets.Example.styles.css" rel="stylesheet" />
+    <link href="CompressedStaticFiles.Example.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -28,5 +28,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="null-javascript-file.js"></script>
 </body>
 </html>
