--- a/CompressedStaticFiles.Example/Shared/MainLayout.razor
+++ b/CompressedStaticFiles.Example/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>CompressedStaticAssets.Example</PageTitle>
+<PageTitle>Compressed Static Files</PageTitle>
 
 <div class="page">
     <div class="sidebar">
