--- a/CompressedStaticFiles.Example/_Imports.razor
+++ b/CompressedStaticFiles.Example/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using CompressedStaticAssets.Example
-@using CompressedStaticAssets.Example.Shared
+@using CompressedStaticFiles.Example
+@using CompressedStaticFiles.Example.Shared
