--- a/CompressedStaticFiles.Example/Pages/Index.razor
+++ b/CompressedStaticFiles.Example/Pages/Index.razor
@@ -20,8 +20,8 @@
 <p>Some compression metrics for <code>bootstrap.min.css</code>:</p>
 <ul>
     <li style="color: red;">Uncompressed response size: 163 kB;</li>
-    <li style="color: darkorange;">Dynamic compressed response size: 35.5 kB; and</li>
-    <li style="color: green;">Pre-compressed response size: 17.5 kB: SUCCESS!</li>
+    <li style="color: darkorange;">Dynamic compressed response size (Brotli): 35.5 kB; and</li>
+    <li style="color: green;">Pre-compressed response size (Brotli): 17.5 kB: SUCCESS!</li>
 </ul>
 
 <h1 style="margin-top: 48px;">How to detect file compression</h1>
